--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   },
   "dependencies": {
     "create-hash": "^1.1.0",
-    "inherits": "^2.0.1"
+    "inherits": "^2.0.1",
+    "stream": "0.0.2"
   },
   "browser": "./browser.js"
 }
